Fix: advanced search fields misaligned

--- a/src/css/page-content.css
+++ b/src/css/page-content.css
@@ -34,6 +34,7 @@
   & iframe {
     width: 100%;
     height: auto;
+    border: none;
   }
 }
 
